# senterm-opensource

./: .gitignore  Cargo.toml  HOTKEY.md  LICENSE  README.md  package-lock.json
.github/: FUNDING.yml
binaries/: README.md  RELEASE.md  install-linux.sh  install-universal.sh  install.sh
scripts/: install-linux.sh  install-macos.sh  run-tests.sh
src/: app.rs  config.rs  logging.rs  main.rs  navigation.rs  ui.rs
src/events/: clipboard.rs  dialog.rs  editor.rs  file_manager.rs  mod.rs  process.rs  settings.rs  shell.rs  viewer.rs
src/fs/: mod.rs  watcher.rs
src/plugin/: mod.rs
src/process/: mod.rs
src/system/: mod.rs
src/viewer/: editor.rs  highlight.rs  image.rs  mod.rs  text.rs
